; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/vbscript/extr_regexp.c_regexp_set_flags.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/vbscript/extr_regexp.c_regexp_set_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32 }

@REG_FOLD = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@E_FAIL = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @regexp_set_flags(%struct.TYPE_5__** %0, i8* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %6, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @REG_FOLD, align 4
  %16 = and i32 %14, %15
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* @REG_FOLD, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %16, %19
  br i1 %20, label %21, label %45

21:                                               ; preds = %4
  %22 = load i8*, i8** %7, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %6, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %6, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* @FALSE, align 4
  %34 = call %struct.TYPE_5__* @regexp_new(i8* %22, i32* %23, i32 %27, i32 %31, i32 %32, i32 %33)
  store %struct.TYPE_5__* %34, %struct.TYPE_5__** %10, align 8
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %36 = icmp ne %struct.TYPE_5__* %35, null
  br i1 %36, label %39, label %37

37:                                               ; preds = %21
  %38 = load i32, i32* @E_FAIL, align 4
  store i32 %38, i32* %5, align 4
  br label %52

39:                                               ; preds = %21
  %40 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %6, align 8
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %40, align 8
  %42 = call i32 @regexp_destroy(%struct.TYPE_5__* %41)
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %44 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %6, align 8
  store %struct.TYPE_5__* %43, %struct.TYPE_5__** %44, align 8
  br label %50

45:                                               ; preds = %4
  %46 = load i32, i32* %9, align 4
  %47 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %6, align 8
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %47, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 0
  store i32 %46, i32* %49, align 4
  br label %50

50:                                               ; preds = %45, %39
  %51 = load i32, i32* @S_OK, align 4
  store i32 %51, i32* %5, align 4
  br label %52

52:                                               ; preds = %50, %37
  %53 = load i32, i32* %5, align 4
  ret i32 %53
}

declare dso_local %struct.TYPE_5__* @regexp_new(i8*, i32*, i32, i32, i32, i32) #1

declare dso_local i32 @regexp_destroy(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
